--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
 	</context-param>  
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoadListener</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
   
 </web-app>
