--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,54 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.beerblog</groupId>
-  <artifactId>beer-blog-hiccup</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.beerblog</groupId>
+	<artifactId>beer-blog-hiccup</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 
-  
-  
-  <!-- Testing -->
-  <properties>
-  <org.springframework.version>4.1.5.RELEASE</org.springframework.version>
-  </properties>
-  
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-    
-     <!-- ADDED LATER -->
-     <!-- Allows to run as Maven build - tomcat7:run -->
-     
-    <plugin>
-    	<groupId>org.apache.tomcat.maven</groupId>
-    	<artifactId>tomcat7-maven-plugin</artifactId>
-    	<version>2.2</version>
-    </plugin>
-     
-    
-    <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.3</version>
-        <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
-      </plugin>
 
-      
-    </plugins>
-  </build>
 
-	
-  <dependencies>
- 
+	<properties>
+		<org.springframework.version>4.1.5.RELEASE</org.springframework.version>
+	</properties>
+
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+
+			<!-- ADDED LATER -->
+			<!-- Allows to run as Maven build - tomcat7:run -->
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+			</plugin>
+
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<warSourceDirectory>WebContent</warSourceDirectory>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+
+
+	<dependencies>
+
 		<!-- Core utilities used by other modules. Define this if you use Spring 
 			Utility APIs (org.springframework.core.*/org.springframework.util.*) -->
 		<dependency>
@@ -160,138 +157,79 @@
 			<scope>test</scope>
 		</dependency>
 
-  
-  
-  
-  <!-- UPDATE LATER USING TOMCAT -->
-  
-  <!-- TOMCAT? -->
-  
-  <dependency>
-	<groupId>jstl</groupId>
-	<artifactId>jstl</artifactId>
-	<version>1.2</version>
-</dependency>
-   
-  
- 
-  	
-  	 <!-- Added with Apache Tiles -->  
-  	<dependency>
-  		<groupId>org.apache.tiles</groupId>
-  		<artifactId>tiles-core</artifactId>
-  		<version>3.0.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.tiles</groupId>
-  		<artifactId>tiles-jsp</artifactId>
-  		<version>3.0.5</version>
-  	</dependency>
-  	
-  	<!-- Later added too -->
-  	<!-- 
-  	  	<dependency>
-  	  		<groupId>org.apache.tiles</groupId>
-  	  		<artifactId>tiles-request-api</artifactId>
-  	  		<version>1.0.6</version>
-  	  	</dependency>
- -->
 
-  	  	<!-- IT CAUSES A LOT OF PROBLEMS, DEAL WITH IT -->
-  			
-  	<!-- DELETED -->
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-log4j12</artifactId>
-  		<version>1.7.7</version>
-  	</dependency>
- 		
- 			
- 			
-  
-  
-  
-      <!--   OLD DEPENDENCIES -->
-      
-  
+
+
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 
 
 
 
-  	<dependency>
-  		<groupId>commons-logging</groupId>
-  		<artifactId>commons-logging</artifactId>
-  		<version>1.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.servlet</groupId>
-  		<artifactId>jstl</artifactId>
-  		<version>1.2</version>
-  	</dependency>
-      
-     <!-- OLD -->
-     
-     
-     <!-- Hibernate JPA -->
-     
-     <dependency>
-     	<groupId>org.hibernate</groupId>
-     	<artifactId>hibernate-entitymanager</artifactId>
-     	<version>4.3.8.Final</version>
-     </dependency>
-     
-     <dependency>
-     	<groupId>org.springframework.data</groupId>
-     	<artifactId>spring-data-jpa</artifactId>
-     	<version>1.7.2.RELEASE</version>
-     </dependency>
-
-     <dependency>
-     	<groupId>org.hsqldb</groupId>
-     	<artifactId>hsqldb</artifactId>
-     	<version>2.3.2</version>
-     </dependency>
+		<!-- Added with Apache Tiles -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-core</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>3.0.5</version>
+		</dependency>
 
 
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.7</version>
+		</dependency>
 
-  </dependencies>
-      
-      <!-- Duplicates? 
-      
-     <dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-context</artifactId>
-  		<version>4.1.5.RELEASE</version>
-  	</dependency>
-      
-       	<dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-web</artifactId>
-  		<version>4.1.5.RELEASE</version>
-  	</dependency>
-  	
-  	  	<dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-webmvc</artifactId>
-  		<version>4.1.5.RELEASE</version>
-  	</dependency>
-  	
-  	   	<dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-aop</artifactId>
-  		<version>4.1.5.RELEASE</version>
-  	</dependency>
-      
-        -->
-        
-        
 
-        
-        
+		<!-- OLD DEPENDENCIES -->
 
-	
-	<!-- Might help  http://www.javavids.com/video/spring-web-app-tutorial-extras-bom-dependency.html -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<!-- OLD -->
+
+
+		<!-- Hibernate JPA -->
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.3.8.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>1.7.2.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
+	</dependencies>
+
+
+	<!-- Might help http://www.javavids.com/video/spring-web-app-tutorial-extras-bom-dependency.html -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -303,8 +241,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-        
-        
 
-        
+
 </project>
