--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.3.1.RELEASE</version>
+    </parent>
 
 	<properties>
 		<org.springframework.version>4.1.5.RELEASE</org.springframework.version>
@@ -15,6 +19,11 @@
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
+			<!-- Spring boot -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
 
 			<!-- ADDED LATER -->
 			<!-- Allows to run as Maven build - tomcat7:run -->
@@ -28,7 +37,7 @@
 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+<!-- 				<version>3.1</version> -->
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -36,7 +45,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.3</version>
+<!-- 				<version>2.3</version> -->
 				<configuration>
 					<warSourceDirectory>WebContent</warSourceDirectory>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
@@ -48,6 +57,20 @@
 
 
 	<dependencies>
+		<!-- Spring boot -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+<!-- 			<version>1.3.1.RELEASE</version> -->
+		</dependency>
+
+    
+<!--         <dependency> -->
+<!--             <groupId>org.springframework.boot</groupId> -->
+<!--             <artifactId>spring-boot-starter-thymeleaf</artifactId> -->
+<!--         </dependency> -->
+   
+
 
 		<!-- Core utilities used by other modules. Define this if you use Spring 
 			Utility APIs (org.springframework.core.*/org.springframework.util.*) -->
@@ -135,10 +158,10 @@
 		<!-- Spring MVC for Servlet Environments (depends on spring-core, spring-beans, 
 			spring-context, spring-web) Define this if you use Spring MVC with a Servlet 
 			Container such as Apache Tomcat (org.springframework.web.servlet.*) -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-		</dependency>
+<!-- Tomcat from spring-boot should be used only		<dependency> -->
+<!-- 			<groupId>org.springframework</groupId> -->
+<!-- 			<artifactId>spring-webmvc</artifactId> -->
+<!-- 		</dependency> -->
 
 		<!-- Spring MVC for Portlet Environments (depends on spring-core, spring-beans, 
 			spring-context, spring-web) Define this if you use Spring MVC with a Portlet 
@@ -183,11 +206,17 @@
 
 
 
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.7</version>
-		</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>org.slf4j</groupId> -->
+<!-- 		<artifactId>slf4j-log4j12</artifactId> -->
+<!-- 		<version>1.7.7</version> -->
+<!-- 		<exclusions> -->
+<!-- 			<exclusion> -->
+<!-- 				<groupId>org.slf4j</groupId> -->
+<!-- 				<artifactId>logback-classic</artifactId> -->
+<!-- 			</exclusion> -->
+<!-- 		</exclusions> -->
+<!-- 	</dependency> -->
 
 
 		<!-- OLD DEPENDENCIES -->
@@ -200,7 +229,7 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+<!-- 			<version>1.2</version> -->
 		</dependency>
 
 		<!-- OLD -->
@@ -211,55 +240,55 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.8.Final</version>
+<!-- 			<version>4.3.8.Final</version> -->
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>1.7.2.RELEASE</version>
+<!-- 			<version>1.7.2.RELEASE</version> -->
 		</dependency>
 
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.3.2</version>
+<!-- 			<version>2.3.2</version> -->
 		</dependency>
 		
 		<!-- Spring Security for log-in -->
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-web</artifactId>
-		<version>3.2.3.RELEASE</version>
+<!-- 		<version>3.2.3.RELEASE</version> -->
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-config</artifactId>
-		<version>3.2.3.RELEASE</version>
+<!-- 		<version>3.2.3.RELEASE</version> -->
 	</dependency>
 
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-taglibs</artifactId>
-		<version>3.2.3.RELEASE</version>
+<!-- 		<version>3.2.3.RELEASE</version> -->
 	</dependency>
-
 
 	</dependencies>
 
 
 	<!-- Might help http://www.javavids.com/video/spring-web-app-tutorial-extras-bom-dependency.html -->
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-framework-bom</artifactId>
-				<version>${org.springframework.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+<!-- 	<dependencyManagement> -->
+<!-- 		<dependencies> -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.springframework</groupId> -->
+<!-- 				<artifactId>spring-framework-bom</artifactId> -->
+<!-- 				<version>${org.springframework.version}</version> -->
+<!-- 				<type>pom</type> -->
+<!-- 				<scope>import</scope> -->
+<!-- 			</dependency> -->
+<!-- 		</dependencies> -->
+<!-- 	</dependencyManagement> -->
+
 
 
 </project>
